testsuite/tests/module/mod76.stderr

mod76.hs:5:1: error:
    parse error on input ‘module’ (possibly incorrect indentation or mismatched brackets)
