testsuite/tests/module/mod76.hs
-- !!! Multiple modules per file
module M where
foo = 'a'

module N where
bar = 'b'

